# KnightOnline

./: .gitignore  .gitmodules  All.slnx  CMakeLists.txt  Client.slnx  ClientTools.slnx  Tests.slnx  ThirdParty.slnx
.github/workflows/: build_msbuild_all.yml  clang-tidy-check.yml
build_scripts/: dev_run.cmd  msbuild.cmd  rebuild_stack.cmd  run_stack.cmd  run_stack.ps1  stop_stack.cmd  stop_stack.ps1
cmake/: FindJpeg.cmake  FindOpenALSoft.cmake  FindZlib.cmake
cmake/dx9sdk/: dx9sdk-config.cmake
docker/cross-compile-client/: Dockerfile  README.MD  build_client.sh  run_client.sh
props/: jpegfile.props  libjpeg.props
src/Client/JpegFile/: CMakeLists.txt  JpegFile.h  JpegFile.vcxproj
src/Client/WarFare/: APISocket.cpp  APISocket.h  GameDef.h  GameProcLogIn_1098.cpp  GameProcLogIn_1298.cpp  GameProcMain.cpp  GameProcMain.h  GameProcedure.cpp  IconItemSkill.cpp  IconItemSkill.h  MagicSkillMng.cpp  N3FXBundleGame.cpp  N3FXMgr.cpp  PlayerBase.h  PlayerOther.cpp  PlayerOther.h  StdAfx.h  SubProcPerTrade.cpp  UIChat.cpp  UIDroppedItemDlg.cpp  UIHotKeyDlg.cpp  UIImageTooltipDlg.cpp  UIInventory.cpp  UILoading.h  UIMessageWnd.cpp  UISkillTreeDlg.cpp  UITransactionDlg.cpp  WarFare.vcxproj
src/FileIO/: FileWriter.cpp
src/MathUtils/: Matrix44.h  Matrix44.inl  Quaternion.h  Quaternion.inl  Vector2.h  Vector3.h  Vector3.inl  Vector4.h
src/N3Base/: AudioDecoderThread.cpp  AudioThread.cpp  CMakeLists.txt  My_3DStruct.h  N3AnimKey.cpp  N3BaseFileAccess.cpp  N3Camera.cpp  N3Chr.h  N3Cloud.cpp  N3Eng.cpp  N3FXPMesh.cpp  N3FXPartBase.h  N3GERain.cpp  N3GERain.h  N3GESnow.cpp  N3GESnow.h  N3GlobalEffect.cpp  N3GlobalEffect.h  N3Joint.h  N3PMesh.cpp  N3ShapeMgr.cpp  N3SkyMng.cpp  N3SndObj.cpp  N3TableBase.h  N3Texture.cpp  N3UIEdit.cpp  N3UIString.cpp
src/Server/AIServer/: Define.h  GameSocket.cpp  MagicProcess.cpp  Map.cpp  Npc.cpp  Npc.h  NpcMagicProcess.cpp  SendThreadMain.cpp  User.cpp  User.h
src/Server/Ebenezer/: AISocket.cpp  EbenezerApp.cpp  EbenezerApp.h  GameDefine.h  SendWorkerThread.cpp  User.cpp  User.h
src/Server/shared-server/: ReadQueueThread.cpp  SharedMemoryBlock.cpp  TcpSocketManager.h  shared-server.vcxproj
src/shared/: ByteBuffer.cpp  Thread.cpp  Thread.h  TimerThread.cpp  globals.h  packets.h
tests/: .clang-tidy
tests/FileIO/: FileReaderSetup_test.cpp  FileWriterSetup_test.cpp  FileWriter_test.cpp
tests/MathUtils/: IntersectTriangle_test.cpp
tests/Server/: .clang-format
tests/Server/Ebenezer/: ByteBuffer_test.cpp  CMakeLists.txt  Ebenezer.Tests.vcxproj  Ebenezer.Tests.vcxproj.filters  ItemUpgrade_test.cpp  TestApp.h  TestMap.h  TestUser.h  packet_structs.h
tests/Server/Ebenezer/data/: ItemUpgrade_test_data.h  Item_test_data.h
